[package]
name = "hibe"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/AirOne01/hibe"
repository = "https://github.com/AirOne01/hibe"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.2"
