[package]
name = "hibe"
version = "1.1.0"
edition = "2021"
description = "Quick utility for hibernating your system"
license = "MIT"
homepage = "https://github.com/AirOne01/hibe"
repository = "https://github.com/AirOne01/hibe"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dialoguer = "0.10.2"
