[package]
name = "hibe"
version = "1.2.1"
edition = "2021"
description = "Quick utility for hibernating your system"
license = "MIT"
homepage = "https://github.com/AirOne01/hibe"
repository = "https://github.com/AirOne01/hibe"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.18"
dialoguer = "0.10.2"
log = "0.4.17"
simple_logger = "4.0.0"
